# CodeSumma

./: .env.template  .flake8  .gitignore  README.md  cache.py  file_processing.py  main.py  openai_api.py  pyproject.toml  requirements.txt  setup.py  summary.py  traceback_parser.py
.github/workflows/: ci.yml
scripts/: codesumma.sh
src/: __init__.py  cache.py  file_processing.py  openai_api.py  summary.py  traceback_parser.py  utils.py
tests/: conftest.py  test_file_processing.py  test_summary.py  test_traceback_parser.py
tests/test_files/: test_file.py  test_file2.py  traceback.txt
